NRsustainVol Save/Load
NR can now save the value from the Sustain Volume slider and load it back up without affecting the In-Game sustain volume.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ song.desc
 .idea/.idea.NotReaper/.idea/contentModel.xml
 *.meta
 Packages/packages-lock.json
+*.audica
+*.meta
+Packages/packages-lock.json
+ProjectSettings/QualitySettings.asset
